<resources>
    <string name="app_name">Game Guide</string>
    <string name="botao_tema">🌙 Theme</string>
    <string name="botao_idioma">🇺🇸 EN/PT</string>
    <string name="titulo_principal">Hugo Top 10 Games</string>

    <string name="capa_jogo">Game cover</string>

    <string name="nome_sekiro">Sekiro: Shadows Die Twice</string>
    <string name="desc_sekiro">An action game set in feudal Japan focused on precise combat and exploration.</string>
    <string name="nome_isaac">The Binding of Isaac</string>
    <string name="desc_isaac">A roguelike action RPG shooter with dungeon elements.</string>
    <string name="desc_webfishing">A social multiplayer fishing game where players fish and chat in 3D rooms.</string>
    <string name="desc_mhw">An open-world RPG where players hunt monsters in the New World.</string>
    <string name="desc_mouthwashing">A psychological horror game set on a space freighter.</string>
    <string name="desc_warframe">A free online action game where players control the Tenno warriors.</string>

    <string name="genero_acao_aventura">Action and Adventure</string>
    <string name="genero_roguelike">Roguelike</string>
    <string name="genero_casual">Casual</string>
    <string name="genero_aventura">Adventure</string>
    <string name="genero_tiro">Third-person Shooter</string>

    <string name="dica_filtro_jogo">Buscar jogo por nome...</string>
    <string name="botao_cadastro">Cadastrar Jogo</string>

    <string name="titulo_cadastro">Novo Jogo</string>
    <string name="salvar_cadastro">SALVAR JOGO</string>
    <string name="escolher_imagem">Escolher Capa</string>
    <string name="imagem_do_jogo">Capa do Jogo</string>

    <string name="nome_do_jogo">Nome do Jogo</string>
    <string name="desenvolvedora">Desenvolvedora</string>
    <string name="genero_categoria">Gênero / Categoria</string>
    <string name="descricao">Descrição</string>
    <string name="link_steam">Link da Steam</string>
    <string name="link_wiki">Link da Wiki / Site Oficial</string>

</resources>